--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,29 @@
             </div>
             <div class="row">
                 <br>
+                <br>
             </div>
             <div class="row align-items-start">
                 <div class="col">
-                    PROGRAMMA DA ESEGUIRE:
+                    <h3>
+                        PROGRAMMA DA ESEGUIRE:
+                    </h3>
                 </div>
-                <div class="col" id="programName">
-                    <i>nessuno</i>
+                <div class="col">
+                    <h3><strong id="programName"><i>nessuno</i></strong></h3>
                 </div>                
             </div>
+            <div class="row">
+                <br>
+            </div>
             <div class="row align-items-start">
                 <div class="col">
-                    DATA RICEZIONE COMANDO:
+                    <h3>
+                        DATA RICEZIONE COMANDO:
+                    </h3>
                 </div>
-                <div class="col" id="commandTime">
-                    -
+                <div class="col">
+                    <h3><strong id="commandTime">-</strong></h3>
                 </div>                
             </div>
         </div>
