--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,8 @@
                 <br>
             </div>
             
-            <div class="row align-items-start" style="display: none">
+            <div class="row align-items-start">
+            <!-- <div class="row align-items-start" style="display: none"> -->
                 <div class="col">
                     <h3>
                         QUANTITA' COMPLETATA:
